# analysis_titanic

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: agent_core.mdc  agent_implement.mdc  agent_workflows.mdc
config/: .env.example
data/: README.md
doc/adr/: 0001-hatchling-build-backend.md
doc/ai_guidelines/: Project_map.md  エージェント実装記録.md  実装規約.md  試験実装のエラー.md
doc/records/: README.md
doc/reference/: README.md
doc/reference/cheatsheets/: git.md
doc/reference/getting-started/: 入門ガイド.md
doc/reference/setup/: uv.md
doc/specs/: 00_プロジェクト概要.md  00_開発日誌.md  01_ABC見送り・ギャップ台帳.md  02_要件定義.md  03_システム設計.md  04_機能一覧.md  05_ディレクトリ構成.md  06_ROADMAP.md  07_CHANGELOG.md  08_分析状況.md
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_submission.ipynb  README.md  test.ipynb
scripts/: setup_env.ps1  setup_env.sh
src/analysis_titanic/: README.md  __init__.py  load_data.py  paths.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: test_load_data.py
