[project]
name = "analysis-titanic"
version = "0.1.0"
description = "Titanic 生存予測のデータ分析プロジェクト"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis_titanic"]

[tool.ruff.format]
preview = true

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
